--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,14 @@
 unbind C-b
 set -g prefix C-a
+bind-key C-a last-window
+
+set -s escape-time 0
+
 set -g default-terminal "screen-256color"
 
+set-option -g default-command "command -v reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL -l"
+set-window-option -g mode-keys vi
+
+setw -g aggressive-resize on
+
+set-window-option -g window-status-current-bg red
