Adds powerline status

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,3 +12,10 @@ set-window-option -g mode-keys vi
 setw -g aggressive-resize on
 
 set-window-option -g window-status-current-bg red
+
+# powerline installed with
+#   pip3 install powerline-status
+# Find {repository_root} with
+#   pip3 show powerline-status
+run-shell powerline-daemon -q
+source "/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
