Rearrange bash initialization

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,6 @@
-unbind C-b
-set -g prefix C-a
-bind-key C-a last-window
-
+#unbind C-b
+#set -g prefix C-a
+#bind-key C-a last-window
 set -s escape-time 0
 
 set -g default-terminal "screen-256color"
@@ -9,13 +8,13 @@ set -g default-terminal "screen-256color"
 set-option -g default-command "command -v reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL -l"
 set-window-option -g mode-keys vi
 
-setw -g aggressive-resize on
+#setw -g aggressive-resize off
 
-set-window-option -g window-status-current-bg red
+#set-window-option -g window-status-current-bg red
 
 # powerline installed with
 #   pip3 install powerline-status
 # Find {repository_root} with
 #   pip3 show powerline-status
-run-shell powerline-daemon -q
+run-shell "powerline-daemon -q"
 source "/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
