Fix default terminal and turn off powerline

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 #bind-key C-a last-window
 set -s escape-time 0
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set-option -g default-command "command -v reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL -l"
 set-window-option -g mode-keys vi
@@ -16,5 +16,5 @@ set-window-option -g mode-keys vi
 #   pip3 install powerline-status
 # Find {repository_root} with
 #   pip3 show powerline-status
-run-shell "powerline-daemon -q"
-source "/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+#run-shell "powerline-daemon -q"
+#source "/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
